methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:1: error: missing argument list for method faireV in class MethodsPicture
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `faireV _` or `faireV(_)` instead of `faireV`.
override def run() {faireV
                    ^MethodsPicture:7: error: not found: value doroite
def faireV(c:Color){avance();doroite;setCouleurBorsse(c);a();avance();droite();avance();a();avance();droite();avance();a();gauche(); avance;gauche()}
                             ^MethodsPicture:7: error: not found: value setCouleurBorsse
def faireV(c:Color){avance();doroite;setCouleurBorsse(c);a();avance();droite();avance();a();avance();droite();avance();a();gauche(); avance;gauche()}
                                     ^