methods.picture.MethodsPicture.scala.code
override def run() {faireV
}




def faireV(c:Color){avance();doroite;setCouleurBorsse(c);a();avance();droite();avance();a();avance();droite();avance();a();gauche(); avance;gauche()}



def a(){baisseBrosse();leveBrosse()}